[project]
name = "dndbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.5.2",
    "fuzzywuzzy>=0.18.0",
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "logging>=0.4.9.6",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
]

[dependency-groups]
dev = [
    "fuzzywuzzy-stubs>=0.0.1",
    "google-auth-stubs>=0.3.0",
    "mypy[faster-cache]>=1.17.0",
    "types-requests>=2.32.4.20250611",
]
